# Note_Taking_App

./: .gitignore  README.md  categories.txt  openai_test.py  pyproject.toml  requirements.txt
note_app/: llm_interface.py  main.py  note_manager.py  streamlit_app.py  voice_recorder.py  web_app.py
note_app/agents/: router.py
note_app/config/: settings.py
note_app/ingest/: note_ingest.py
note_app/legacy/: __init__.py  categories.py  main.py  note_manager.py
note_app/memory/: extractor.py  schema.py
note_app/retrieval/: answer.py  search.py  vector_store.py
note_app/static/: app.js  style.css
note_app/storage/: jsonl_store.py
note_app/templates/: categories.html  index.html  layout.html  notes.html  query.html  record.html
