[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "note-taking-app"
version = "0.1.0"
description = "AI voice note taking application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
    "python-dotenv>=1.0.0",
    "Flask>=2.2.0",
    "streamlit>=1.30.0",
]

[tool.setuptools]
packages = ["note_app"]

[tool.poetry]
package-mode = false

